Cubemap doesn't bake from current frame of animation. #62566

Closed
opened 2019-03-14 12:07:22 +01:00 by Michael Soluyanov · 5 comments

System Information
Operating system: ubuntu 18.04
Graphics card: GTX 1070 driver: 390.116

Blender Version
Broken: March 13, 01:20:20 - bf9904ec80

Short description of error
Cubemap doesn't bake from current frame of animation, it use first keyframe of animation, even if object in different position:

Example. On 1 keyframe plane has red side up. On second keyframe white side is up. When you press bake cubemap on second keyframe, it bake object plane from first keyframe, like red side is up:

Снимок экрана от 2019-03-14 13-58-14.png

Exact steps for others to reproduce the error

  1. Open file

cubemap animation test.blend

  1. Go to frame 20 (if not so) and press bake cubemap. You will see the result from picture before.
System Information Operating system: ubuntu 18.04 Graphics card: GTX 1070 driver: 390.116 Blender Version Broken: March 13, 01:20:20 - bf9904ec8018 **Short description of error** Cubemap doesn't bake from current frame of animation, it use first keyframe of animation, even if object in different position: Example. On 1 keyframe plane has red side up. On second keyframe white side is up. When you press bake cubemap on second keyframe, it bake object plane from first keyframe, like red side is up: ![Снимок экрана от 2019-03-14 13-58-14.png](https://archive.blender.org/developer/F6820774/Снимок_экрана_от_2019-03-14_13-58-14.png) **Exact steps for others to reproduce the error** 1. Open file [cubemap animation test.blend](https://archive.blender.org/developer/F6820806/cubemap_animation_test.blend) 2. Go to frame 20 (if not so) and press bake cubemap. You will see the result from picture before.
Author
Member

Added subscriber: @crantisz

Added subscriber: @crantisz

Added subscribers: @fclem, @ZedDB

Added subscribers: @fclem, @ZedDB
Clément Foucault was assigned by Sebastian Parborg 2019-03-14 12:31:49 +01:00

@fclem don't know if this should count as a feature request or now. So I'll leave that decision up to you.

@fclem don't know if this should count as a feature request or now. So I'll leave that decision up to you.

This issue was referenced by f9a69a481e

This issue was referenced by f9a69a481e4719906f9c17bdfc1085bd07bc69ce

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62566
No description provided.