Fix T62566 Eevee: Cubemap doesn't bake from current frame of animation

This was technically a feature request but it was quite simple to implement
so I did it quickly. Also it is much more consistent now.