source/blender/draw/engines/eevee/eevee_lightcache.h
@@ -36,8 +36,9 @@ struct ViewLayer;
 /* Light Bake */
 struct wmJob *EEVEE_lightbake_job_create(
         struct wmWindowManager *wm, struct wmWindow *win, struct Main *bmain,
-        struct ViewLayer *view_layer, struct Scene *scene, int delay);
-void *EEVEE_lightbake_job_data_alloc(struct Main *bmain, struct ViewLayer *viewlayer, struct Scene *scene, bool run_as_job);
+        struct ViewLayer *view_layer, struct Scene *scene, int delay, int frame);
+void *EEVEE_lightbake_job_data_alloc(
+        struct Main *bmain, struct ViewLayer *viewlayer, struct Scene *scene, bool run_as_job, int frame);
 void EEVEE_lightbake_job_data_free(void *custom_data);
 void EEVEE_lightbake_update(void *custom_data);
 void EEVEE_lightbake_job(void *custom_data, short *stop, short *do_update, float *progress);
