source/blender/editors/render/render_shading.c
@@ -841,7 +841,7 @@ static int light_cache_bake_exec(bContext *C, wmOperator *op)
 	G.is_break = false;
 
 	/* TODO abort if selected engine is not eevee. */
-	void *rj = EEVEE_lightbake_job_data_alloc(bmain, view_layer, scene, false);
+	void *rj = EEVEE_lightbake_job_data_alloc(bmain, view_layer, scene, false, scene->r.cfra);
 
 	light_cache_bake_tag_cache(scene, op);
 
@@ -866,7 +866,7 @@ static int light_cache_bake_invoke(bContext *C, wmOperator *op, const wmEvent *U
 	Scene *scene = CTX_data_scene(C);
 	int delay = RNA_int_get(op->ptr, "delay");
 
-	wmJob *wm_job = EEVEE_lightbake_job_create(wm, win, bmain, view_layer, scene, delay);
+	wmJob *wm_job = EEVEE_lightbake_job_create(wm, win, bmain, view_layer, scene, delay, scene->r.cfra);
 
 	if (!wm_job) {
 		return OPERATOR_CANCELLED;
